# spir-v_binary_shaders_loading_example_qt_glew

./: CMakeLists.txt  fragment_shader_1.frag  glwindow.cpp  glwindow.h  main.cpp  shaders.qrc  vertex_shader.vert  vertex_shader_1.vert
shaders/: dsModel.glsl  fragment_shader.frag  fragment_shader.frag.d  fragment_shader.frag.spv  vertex_shader.vert  vertex_shader.vert.d  vertex_shader.vert.spv
